@@ -5,3 +5,4 @@ Test-For:
  pkg-config-bad-directive
  pkg-config-multi-arch-wrong-dir
  multiarch-foreign-pkgconfig
+ pkg-config-unavailable-for-cross-compilation
